--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1 class="text-center my-4">Get your favourite food here!</h1>
+      <h1 class="text-center my-4">Get your favourite food from here!</h1>
       <div id="solo-food" class="mx-auto my-3 mb-5 w-50">
         <!-- <div class="card mx-auto" style="width: 18rem">
           <img src="..." class="card-img-top" alt="..." />
